[gd_scene load_steps=3 format=3 uid="uid://cwouk85vl7i8"]

[ext_resource type="Script" path="res://scenes/menus/game_setup.gd" id="1_d35wb"]
[ext_resource type="Script" path="res://addons/ActionIcon/ActionIcon.gd" id="2_5nafd"]

[node name="GameSetup" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_d35wb")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 32

[node name="TrackVBox" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 64
alignment = 1

[node name="SelectTrackLabel" type="Label" parent="VBoxContainer2/HBoxContainer/TrackVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Select track
"
horizontal_alignment = 1

[node name="LevelList" type="GridContainer" parent="VBoxContainer2/HBoxContainer/TrackVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 64
theme_override_constants/v_separation = 32
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/TrackVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/TrackVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Laps"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LapCount" type="Label" parent="VBoxContainer2/HBoxContainer/TrackVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="LapCountSlider" type="HSlider" parent="VBoxContainer2/HBoxContainer/TrackVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 5.0
value = 3.0
tick_count = 5
ticks_on_borders = true

[node name="JoinVBox" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 64

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/JoinVBox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ActionIcon" type="TextureRect" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("2_5nafd")
action_name = &"join"
joypad_mode = 1

[node name="ActionIcon2" type="TextureRect" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("2_5nafd")
action_name = &"join"
joypad_mode = 2
joypad_model = 4

[node name="ActionIcon3" type="TextureRect" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer2/HBoxContainer"]
layout_mode = 2
script = ExtResource("2_5nafd")
action_name = &"join"
joypad_mode = 2
joypad_model = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Join"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ActionIcon" type="TextureRect" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
script = ExtResource("2_5nafd")
action_name = &"start"
joypad_mode = 1

[node name="ActionIcon2" type="TextureRect" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
script = ExtResource("2_5nafd")
action_name = &"start"
joypad_mode = 2
joypad_model = 4

[node name="ActionIcon3" type="TextureRect" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
script = ExtResource("2_5nafd")
action_name = &"start"
joypad_mode = 2
joypad_model = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer/JoinVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 512)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../HBoxContainer/Ready")
focus_next = NodePath("../HBoxContainer/Ready")
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/JoinVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 256

[node name="Wait" type="Button" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../Ready")
focus_next = NodePath("../Ready")
theme_override_font_sizes/font_size = 32
disabled = true
text = "Wait"

[node name="Ready" type="Button" parent="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Wait")
focus_previous = NodePath("../Wait")
theme_override_font_sizes/font_size = 32
disabled = true
text = "Ready"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 512

[node name="Back" type="Button" parent="VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../Done")
focus_next = NodePath("../Done")
theme_override_font_sizes/font_size = 32
disabled = true
text = "Back"

[node name="Done" type="Button" parent="VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Back")
focus_previous = NodePath("../Back")
theme_override_font_sizes/font_size = 32
disabled = true
text = "Done"

[connection signal="value_changed" from="VBoxContainer2/HBoxContainer/TrackVBox/HBoxContainer/LapCountSlider" to="." method="_on_lap_count_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer/Wait" to="." method="_on_wait_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/JoinVBox/HBoxContainer/Ready" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/Done" to="." method="_on_done_pressed"]
